[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-aioworkers"
dynamic = ["version"]
description = "A plugin to test aioworkers project with pytest"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Alexander Malev", email = "malev@somedev.ru" },
]
keywords = [
    "aioworkers",
    "pytest",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "aioworkers",
    "pytest >= 6.1.0",
]
[project.optional-dependencies]
asyncio = [
    "pytest-asyncio",
]
aiohttp = [
    "pytest-aiohttp",
]
dev-test = [
    "aioworkers==0.26",
    "coverage[toml]==7.2.7",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "pytest-timeout==2.1.0",
    "pytest-mock==3.11.1",
    "pyyaml==6.0.1",
]
dev-lint = [
    "ruff==0.0.282",
    "isort==5.12.0",
    "black==23.7.0",
    "mypy==1.4.1",
    "types-PyYAML==6.0.12.11",
]

[project.entry-points.pytest11]
aioworkers = "pytest_aioworkers.plugin"

[project.urls]
GitHub = "https://github.com/aioworkers/pytest-aioworkers"
Homepage = "https://github.com/aioworkers/pytest-aioworkers"
Documentation = "https://github.com/aioworkers/pytest-aioworkers#readme"
Issues = "https://github.com/aioworkers/pytest-aioworkers/issues"
Source = "https://github.com/aioworkers/pytest-aioworkers"

[tool.hatch.version]
path = "pytest_aioworkers/__init__.py"

[tool.hatch.build]
include = [
    "/pytest_aioworkers",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
]
[tool.hatch.envs.default.scripts]
cov = [
    "coverage run -m pytest",
    "coverage report",
]

[tool.hatch.envs.cov]
detached = true
dependencies = [
    "coverage[toml]",
]
[tool.hatch.envs.cov.scripts]
cov = "coverage run --append -m pytest_aioworkers.utils"

[[tool.hatch.envs.all.matrix]]
python = [
    "3.7",
    "3.8",
    "3.9",
    "3.10",
    "3.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "pytest_aioworkers",
    "tests",
]
addopts = [
    "--doctest-modules",
]

[tool.coverage.run]
branch = true
parallel = false
source = [
    "pytest_aioworkers",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.hatch.envs.lint]
python = "3.8"
features = [
    "dev-lint",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:pytest_aioworkers tests}"
style = [
    "ruff {args:pytest_aioworkers tests}",
    "isort --check-only --diff {args:pytest_aioworkers tests}",
    "black --check --diff {args:pytest_aioworkers tests}",
]
fmt = [
    "ruff --fix {args:pytest_aioworkers tests}",
    "isort {args:pytest_aioworkers tests}",
    "black {args:pytest_aioworkers tests}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.template]
detached = true
dependencies = [
    "scaraplate",
]
[tool.hatch.envs.template.scripts]
update = [
    "scaraplate rollup --no-input {args:../cookiecutter-aioworkers-plugin} ."
]
clone = [
    "git clone https://github.com/aioworkers/cookiecutter-aioworkers-plugin {args:../cookiecutter-aioworkers-plugin}"
]
