[metadata]
name = pytest-aioworkers
version = attr: pytest_aioworkers.__version__
url = https://github.com/aioworkers/pytest-aioworkers
project_urls =
    GitHub = https://github.com/aioworkers/pytest-aioworkers
description = A plugin to test aioworkers project with pytest
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Alexander Malev
author_email = malev@somedev.ru
maintainer = Alexander Malev
maintainer_email = malev@somedev.ru
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Framework :: Pytest
    Framework :: Pytest
    Intended Audience :: Developers

    License :: OSI Approved :: Apache Software License

    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Topic :: Software Development :: Testing

    Typing :: Typed

[options]
python_requires = >=3.6.2
packages = find:
include_package_data = True

install_requires =
    pytest >= 6.1.0
    typing-extensions >= 4.0; python_version < "3.8"
    aioworkers

[options.extras_require]
asyncio =
    pytest-asyncio
aiohttp =
    pytest-aiohttp
testing =
    isort
    black
    mypy
    flake8
    pytest-cov
    pyyaml
    types-PyYAML

[options.entry_points]
pytest11 =
    aioworkers = pytest_aioworkers.plugin

[tool:pytest]
testpaths = tests pytest_aioworkers.py

[flake8]
max_line_length = 79

[mypy]
ignore_missing_imports = True
strict_optional = True

[isort]
profile = black
known_first_party = pytest_aioworkers
known_third_party =
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
